# mcpz

./: .gitignore  CLAUDE.md  Cargo.toml  MCP_SERVER_SHELL_SPEC.md  Makefile  README.md  STREAMABLE_SPEC.md  test_mcp_packages.sh
src/: main.rs
src/http/: handlers.rs  mod.rs  server.rs  session.rs  tls.rs
src/servers/: common.rs  filesystem.rs  mod.rs  shell.rs  sql.rs
